--- a/backend/views/pages/youtubetoMp3.pug
+++ b/backend/views/pages/youtubetoMp3.pug
@@ -1,15 +1,18 @@
 extends ../templates/template
+
 block append config
   - pagina_actual = "secundaria";
-  
-block tubevidemp3
-  form(action="/convertir" method="post")
-    label(for="enlace") Convertir Youtube a mp3
-    input(type="text" id="enlace" name="enlace" placeholder="Buscar o pegar enlace aqui...")
-    button(type="submit") Empezar
-  section
-    h3 ¿Cómo convertir videos Youtube a MP3?
-    ol
-      li Pega la URL de YouTube o inserta las palabras clave en la caja de búsqueda.
-      li Escoge el formato de salida al cuál quieres convertir.
-      li Espera hasta que la conversión sea completada y descarga el archivo. Muy fácil y rápido.
+
+block tubevidemp4
+  .block
+    form(action="/convertir" method="post" class="form-container")
+      label(for="enlace") Convertir Youtube a mp3
+      .input-container
+        input(type="text" id="enlace" name="enlace" placeholder="Buscar o pegar enlace aqui...")
+        button(type="submit") Empezar
+    section
+      h3 ¿Cómo convertir videos Youtube?
+      ol
+        li Pega la URL de YouTube o inserta las palabras clave en la caja de búsqueda.
+        li Escoge el formato de salida al cuál quieres convertir.
+        li Espera hasta que la conversión sea completada y descarga
