--- a/backend/views/scss/style.scss
+++ b/backend/views/scss/style.scss
@@ -14,3 +14,8 @@
     display: flex;
     flex-direction: column;
   }
+
+  @import "blocks/header";
+  @import "blocks/youtubetoMp4";
+  @import "blocks/youtubetoMp3";
+  @import "blocks/footer";
