--- a/backend/views/pages/youtubetoMp3.pug
+++ b/backend/views/pages/youtubetoMp3.pug
@@ -1,8 +1,8 @@
 extends ../templates/template
 
 block append config
-  - page_title = "tubefastvide";
-  - pagina_actual = "principal";
+  - page_title = "tubefastvide"
+  - pagina_actual = "principal"
 
 block tubevidemp4
   .block
