--- a/backend/views/scss/blocks/_footer.scss
+++ b/backend/views/scss/blocks/_footer.scss
@@ -9,14 +9,14 @@ footer {
 footer p {
   color: #000000;
   font-size: 1em;
-  order: 1; /* Coloca el texto del copyright en la parte superior */
+  order: 1;
 }
 
 footer ul {
   display: flex;
   list-style: none;
   color: #000000;
-  order: 2; /* Coloca los enlaces debajo del texto del copyright */
+  order: 2; 
 }
 
 footer ul li {
@@ -25,38 +25,37 @@ footer ul li {
 
 footer a {
     text-decoration: none !important;
-    color: #000000 !important; /* Cambia el color del texto de los enlaces a negro */
+    color: #000000 !important; 
     font-size: 0.8em;
   }
   
   footer a:hover {
     color: #bb0101 !important;
   }
-
-/* Para pantallas pequeñas */
+  /* Para pantallas pequeñas */
 @media (max-width: 767px) {
-    footer {
-      align-items: center; /* Centra los elementos en el eje transversal */
-    }
-  
-    footer p {
-      margin-bottom: 10px;
-      text-align: center; /* Centra el texto */
-    }
-  
-    footer ul {
-      flex-direction: column;
-      align-items: center; /* Centra los elementos en el eje transversal */
-    }
-  
-    footer ul li {
-      margin: 5px 0;
-      text-align: center; /* Centra el texto */
-    }
-  
-    footer ul li a {
-      font-size: 0.6em;
-      text-align: center; /* Centra el texto */
-    }
+  footer {
+    align-items: center; 
+    justify-content: center; 
   }
-  
+
+  footer p {
+    margin-bottom: 10px;
+    text-align: center; 
+  }
+
+  footer ul {
+    flex-direction: column;
+    align-items: center; 
+  }
+
+  footer ul li {
+    margin: 5px 0;
+    text-align: center; 
+  }
+
+  footer ul li a {
+    font-size: 0.6em;
+    text-align: center;
+  }
+}
