--- a/backend/views/scss/blocks/_youtubetoMp3.scss
+++ b/backend/views/scss/blocks/_youtubetoMp3.scss
@@ -45,7 +45,7 @@ form input {
     margin-right: 10px;
     border: 2px solid #bb0101; 
     border-radius: 5px;
-    width: 20rem; /* Ajusta el ancho del input */
+    width: 20rem; 
 }
 
 
@@ -99,7 +99,7 @@ section ol li {
     }
 
     form input {
-        width: 100%; /* Ajusta el ancho del input para pantallas pequeñas */
+        width: 100%;
     }
 
     form button {
